# PCM

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: baseline.yaml  basemodel.yaml  cnn.yaml  config.yaml  iemocap_baseline.yaml  iemocap_pcm.yaml  iemocap_pcm_cnn_no_norm.yaml  iemocap_pcm_linear_no_norm.yaml  linear_no_norm.yaml  linear_with_norm.yaml
scripts/preprocess_features/: extract_features_wav2vec2.py  extract_iemocap_audio.py  extract_wav2vec2_features.py  pitch_contour_processing.py  pitch_extraction_minimal.py
scripts/preprocess_label/: 5_fold.py  labels_extraction.py  preprocess_iemocap.py  split_audio_dataset.py  split_set.py
src/: test.py  train.py
src/data/: collate_fn.py  dataset.py
src/losses/: MSE.py  ccc_loss.py
src/metrics/: ccc.py
src/model/: CrossAttention.py  __init__.py  attention.py  audio_classifier.py  basemodel.py  embeddings.py  encoders.py  pcm_model.py  utils.py
src/utils/: logger.py  pitch_utils.py
