[project]
name = "pcm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "nvitop",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "pillow",
    "pyyaml",
    "pandas",
    "librosa",
    "pysndfx",
    "transformers",
    "huggingface-hub",
    "praat-parselmouth>=0.4.6",
    "ipdb>=0.13.13",
    "torchcodec>=0.8.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
